# cuda_boilerplate

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create_junction.ps1  kernel.cu  kernel.cuh  main.cpp
